--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- navbar-section -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark py-3">
+			<div class="container">
+				<a class="navbar-brand" href="#">
+					<h2 class="text-white pt-1">Bootstrap-Design</h2>
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav ms-auto">
+						<a class="nav-link" href="#">Home</a>
+						<a class="nav-link" href="#">Services</a>
+						<a class="nav-link" href="#">Features</a>
+						<a class="nav-link" href="#">Team</a>
+						<a class="nav-link" href="#">Blog</a>
+						<a class="nav-link" href="#">Contact</a>
+						<button class="btn btn-primary ms-2">Join us</button>
+					</div>
+				</div>
+			</div>
+		</nav>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
