--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 			</div>
 		</nav>
 
+		<!-- hero section -->
+		<div class="hero vh-100 d-flex align-items-center" id="home">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-7 mx-auto text-center">
+						<h1 class="display-4">Bootstrap-Design-Page</h1>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsum minus sint voluptatibus, doloribus consequatur!</p>
+						<a href="#" class="btn btn-primary">Go Page</a>
+						<a href="#" class="btn btn-outline-light">Contact</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
