--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <title>Bootstrap-Design</title>
     <link rel="stylesheet" href="css/sanitize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -38,15 +39,44 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 mx-auto text-center">
-						<h1 class="display-4">Bootstrap-Design-Page</h1>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsum minus sint voluptatibus, doloribus consequatur!</p>
-						<a href="#" class="btn btn-primary">Go Page</a>
+						<h1 class="display-4 text-white" >Bootstrap-Design-Page</h1>
+						<p class="text-white my-3">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsum minus sint voluptatibus, doloribus consequatur!
+						</p>
+						<a href="#" class="btn btn-primary me-2">Go Page</a>
 						<a href="#" class="btn btn-outline-light">Contact</a>
 					</div>
 				</div>
 			</div>
 		</div>
 
+		<!-- Service section -->
+		<section id="services">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 mx-auto text-center">
+						<h6 class="text-primary">SERVICES</h6>
+						<h1>services</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, animi?
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-4 col-sm-6">
+						<div class="service card-effect">
+							<div class="iconbox">
+								<i class="bx bx-message-dots"></i>
+							</div>
+							<h5>Service</h5>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem obcaecati dolor voluptatum. Doloremque, officiis molestiae.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
